done lab_03 with auth
